2004-10-30  Andrew Cagney  <cagney@gnu.org>

	Total breakage identified by Joel Brobecker.
	* mips-tdep.c (after_prologue): Delete.
	(mips_skip_prologue): Use skip_prologue_using_sal.
	(heuristic_proc_desc): Delete, unused.

2004-10-30  Mark Kettenis  <kettenis@gnu.org>

	* procfs.c (proc_get_gregs, proc_get_fpregs, proc_set_gregs)
	(proc_set_fpregs, procfs_fetch_registers, procfs_store_registers):
	Cleanup coding style.

2004-10-30  Andrew Cagney  <cagney@gnu.org>

	* mips-tdep.h (mips_pc_is_mips16): Declare.
	* mips-tdep.c (mips_pc_is_mips16): Rename pc_is_mips16, make
	non-static.  Update calls.

	* cli/cli-decode.c (add_setshow_enum_cmd): New function.
	* command.h (add_setshow_enum_cmd): Declare.
	* mips-tdep.c (_initialize_mips_tdep): Use add_setshow_enum_cmd.

	* mips-tdep.c (_initialize_mips_tdep): Use
	add_setshow_zinteger_cmd.
	
	* mips-tdep.c (mips_eabi_extract_return_value)
	(mips_o64_extract_return_value, mips_o64_store_return_value)
	(return_value_location, mips_eabi_reg_struct_has_addr)
	(mips_eabi_use_struct_convention)
	(mips_eabi_store_return_value): Delete.
	(mips_eabi_store_return_value): New function.
	(mips_eabi_return_value): New function.
	(mips_gdbarch_init): For O64 and EABI, delete
	extract_return_value, store_return_value, use_struct_convention
	and reg_struct_has_addr, add return_value.

	* mips-tdep.c (read_signed_register): Use
	regcache_cooked_read_signed.

2004-10-30  Mark Kettenis  <kettenis@gnu.org>

	* mipsread.c: Cleanup coding style.
	(mipscoff_new_init, mipscoff_symfile_init, mipscoff_symfile_read)
	(mipscoff_symfile_finish): Remove prototypes.

2004-10-29  Mark Kettenis  <kettenis@gnu.org>

	* mips-tdep.c (mips_fetch_instruction, mips16_fetch_instruction)
	(mips_mdebug_frame_cache, mips16_scan_prologue)
	(mips32_scan_prologue, mips_stub_frame_cache)
	(heuristic_proc_start, heuristic_proc_desc)
	(mips_eabi_push_dummy_call, mips_n32n64_push_dummy_call)
	(mips_n32n64_return_value, mips_o32_push_dummy_call)